--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -1,9 +1,12 @@
 name: Daily Auto Commit
 
+permissions:
+  contents: write
+
 on:
   schedule:
-    - cron: "0 10 * * *"   # Runs daily at 10:00 UTC
-  workflow_dispatch:       # Allows manual trigger for testing
+    - cron: "0 10 * * *"   # daily at 10:00 UTC
+  workflow_dispatch:
 
 jobs:
   auto-commit:
@@ -12,15 +15,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+        with:
+          persist-credentials: true
+          fetch-depth: 0
 
       - name: 22f1000821@ds.study.iitm.ac.in - Update file
         run: |
-          echo "Last updated on $(date)" >> daily-log.txt
+          echo "Last updated on $(date -u)" >> daily-log.txt
 
-      - name: Commit changes
+      - name: Commit and push changes
         run: |
-          git config --global user.name "DevSync Bot"
-          git config --global user.email "22f1000821@ds.study.iitm.ac.in"
+          git config user.name "DevSync Bot"
+          git config user.email "22f1000821@ds.study.iitm.ac.in"
           git add daily-log.txt
-          git commit -m "Automated daily commit"
+          git commit -m "Automated daily commit" || echo "Nothing to commit"
           git push
